# Trivia

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml  sync-notion.yml
data/: database.db  marvel.json
data/harry_potter/: all_questions.json
data/marvel/: all_questions.json  learning.json
data/star_wars/: all_questions.json
database/: database.db
scripts/: notion_sync.py
src/: manage.py  marimo.py  sqlite_functions.py  trivia.ipynb  trivia.py  trivia_web.py
src/__marimo__/session/: marimo.py.json
src/scripts/: notion_sync.py
src/sqlite_functions/: basic_functions.py  complex_functions.py  deprecated_functions.py
src/templates/: admin_overview.html  base.html  enter_name.html  index.html  stats.html  study.html  user_home.html
src/trivia_app/: models.py  urls.py  views.py
src/trivia_app/templates/trivia_app/: enter_name.html  index.html  study.html
src/trivia_site/: asgi.py  settings.py  urls.py  wsgi.py
